hphp/test/slow/test_runner/type-errors-suffix.php.type-errors.hhvm.expectf
Catchable fatal error: Value returned from function foo() must be of type int, string given in %stype-errors-suffix.php.type-errors on line 4
